fix: shift home page slightly up

--- a/frontend/src/views/Home/Home.css
+++ b/frontend/src/views/Home/Home.css
@@ -4,6 +4,7 @@
   align-items: center;
   justify-content: center;
   padding: 0 40px;
+  margin-top: -60px;
 }
 
 .emphasis {
